--- a/index.html
+++ b/index.html
@@ -2,60 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="home">
-    
-    <div class="content-wrapper">
-      <div class="container">
     <!-- //  INTRO  // -->
-    <header>
-      <!-- Start content edits below this line. -->
-      <h1>Ankith T P</h1>
-      <h2>Full-Stack Developer</h2>
+    <div class="content-wrapper">  
+      <div class="content-bg">
+        <header>
+          <!-- Start content edits below this line. -->
+          <h1>Ankith</h1>
+          <h2>Java Developer</h2>
 
-      <!-- End content edits here. -->
-    </header>
+          <!-- End content edits here. -->
+        </header>
 
-    <!-- //  ABOUT ME  // -->
-    <main>
-      <!-- Start content edits below this line. -->
-      <p> A passionate MCA student at Siddaganga Institute of Technology with expertise in C++, Java, Python, and web development (HTML, CSS, MySQL). Experienced in projects like a College Management System and a Python-based Virtual Assistant, focusing on intuitive interfaces. Adaptable, creative, and eager to learn new technologies.</p>
-      <p>To learn more about my work history, check out my <a href="resume.html"> Resume</a>. Thanks for stopping by!</p>
+        <!-- //  ABOUT ME  // -->
+        <main>
+          <p>I'm an MCA student with a love for tech and a knack for languages like Java, HTML, CSS, PHP, and SQL. I'm passionate about
+            creating digital solutions that are not only secure but also easy to use. My goal is to design systems that make a genuine impact,
+            combining functionality with a smooth, user-friendly experience.</p>
 
-      <!-- End content edits here. -->
-    </main>
+            <p>To learn more about my work history, check out my <a href="resume.html"> Resume</a>. Thanks for stopping by!</p>
+        </main>
+      </div>
     </div>
-  </div>
-
     <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
-    <footer class="socials">
-      <!-- Start content edits below this line. -->
-      <p>© 2024 by Ankith T P | <a href="">ankithtp2001@gmail.com</a></p>
+    <footer>
+      <p>&copy; 2024 by Ankith |  <a href="mailto:ankithtp2001@gmail.com">ankithtp2001@gmail.com</a></p>
 
-      <!-- Add or remove any networks. -->
-      <ul >
+      <ul class="socials">
         <li>
-          <a href="#" target="_blank"><img src="./placeholder-images/icon-logo-twitter.png" ></a>
+          <a href="#" target="_blank"><img src="images/icon-logo-youtube.png" alt="My YouTube channel"></a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/megha-k27/" target="_blank"><img src="./placeholder-images/icon-logo-linkedin.png" ></a>
+          <a href="#" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram"></a>
         </li>
         <li>
-          <a href="#" target="_blank"><img src="./placeholder-images/icon-logo-facebook.png" ></a>
+          <a href="https://www.linkedin.com/in/ankith-tp-b4193b245/" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn profile"></a>
         </li>
         <li>
-          <a href="https://youtube.com/@techkannada.ai.official?si=eze3WipDTiVaXl3Z" target="_blank"><img src="./placeholder-images/icon-logo-youtube.png" ></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/chocolatemonster/" target="_blank"><img src="./placeholder-images/icon-logo-instagram.png" ></a>
+          <a href="#" target="_blank"><img src="images/icon-logo-twitter.png" alt="My Twitter profile"></a>
         </li>
       </ul>
-      <!-- End content edits here. -->
     </footer>
-    
   </body>
-  
 </html>
