--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
         </section>
 
         <section class="education-item">
-          <h3>Government Junior College</h3>
+          <h3>Chethana vidya mandira College</h3>
           <p>SSLC, 2017 | Percentage - 76</p>
         </section>
       </section>
